@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2007-03-14 19:18:15 $ $Revision: 1.2 $
+\  $Date: 2008-02-20 19:30:06 $ $Revision: 1.3 $
 \
 \ ==============================================================================
 
@@ -215,7 +215,7 @@ t{ nct-build-tree         }t
 
 t{ nct2 nct-length@ 10 ?s }t
 
-t{ nct2 nct-delete-all    }t
+t{ nct2 nct-clear         }t
 
 t{ nct-build-tree         }t
 
