@@ -1,4 +1,8 @@
 0.6.0
+* nct: word nct-delete-all renamed to nct-clear
+* nct: new word: nct-(free)
+* nnt: new word: nnt-(free)
+* str: new word: str-(free)
 * dom: new module: Document Object Model (2008-01-06)
 * rdg: new module: Distributed Random Generator (2007-12-27)
 * tst: new word ?str for module testing strings (2007-12-24)
